# huge-ai-python

./: Makefile  README.md  docker-compose-nvidia.yaml  docker-compose.yaml
.devcontainer/: devcontainer.json
app/: Dockerfile  pyproject.toml  server.py
