[tool.poetry]
name = "app"
version = "1.0.0"
description = "Huge AI Python Template"
authors = ["Ryan Balch <rbalch@hugeinc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
asyncio = "*"
debugpy = "*"
fastapi = "*"
fastmcp = "*"
httpx = "*"
uvicorn = {extras = ["standard"], version = "*"}
websockets = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
